image slider added, components styles updated

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,7 @@
 
 :root {
   --background-primary: #dee5eb;
+  --background-secondary: #002a4f;
   --color-primary: #333;
   --color-secondary: #fff;
 }
